--- a/src/main/webapp/WEB-INF/MSTAConfiguration.json
+++ b/src/main/webapp/WEB-INF/MSTAConfiguration.json
@@ -64,7 +64,7 @@
 		}
 	],
 	"MyMicroserviceName": "MST_Auth",
-	"MyURI": "http://mstauth-env.eba-zgvgmydp.us-east-2.elasticbeanstalk.com/http://mstauth-env.eba-zgvgmydp.us-east-2.elasticbeanstalk.com/MST-Auth/MST_Auth.html",
+	"MyURI": "http://mstauth-env.eba-zgvgmydp.us-east-2.elasticbeanstalk.com/MST-Auth/MST_Auth.html",
 	"MSTA_RESPONSE_TIMEOUT": "100000",
 	"MSTA_TIMEOUT_WAIT": "3000",
 	"MSTA_CONNECTION_TIMEOUT": "100000",
